Changes: 1. Changed the title of the loading page to be variable based on the text passed. 2. Changed the page selector to take the page number as a prop instead of getting the page number from the URL. 3. Changed the classes for CORE, Semantic Scholar, DOAJ and AMiner to have the number of results passed to their constructors (all of them have APIs). 4. Added more buffer results. 5. Updated all the packages used to the latest versions. 6. Changed the route start handler in the "_app.tsx" file to actually work and show the loading page. 7. Changed the text passed to the loading page in the "_app.tsx" file so that the title of the page will show up correctly when the web app is initially loading. 8. Made the "Data" type exportable in the "search.ts" file. 9. Rearranged the themeClass function and the logic for searching in the "index.tsx" file. 10. Completed the search results page. 11. Changed the shadows and the colours on the ArrowButton and also added a hover effect to the dark theme version of the button. 12. Changed the footer to allow for different right margins of the "source" to be passed. It is especially needed for the "source" portion of the footer to align with the center of the search results (it will look weird otherwise). 13. Made the search bar always appear on top using z-index. 14. Added a ResultPage component to make it easier to work with the intersection observer in react to change the page number on the URL based on the scroll position. 15. Added a custom 404 page that simply redirects the user to the main page. 16. Retired fatcat.wiki as it isn't working.

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -13,6 +13,9 @@
   height: 3.5rem;
   font-family: Helvetica;
   padding: 5px 20px;
+  --source-right-margin-normal: 188px;
+  --source-right-margin-700: 72px;
+  --source-right-margin-400: 65px;
 }
 
 .copyleft {
@@ -28,7 +31,7 @@
 }
 
 .source-wrapper {
-  --right-margin: 188px;
+  --right-margin: var(--source-right-margin-normal);
   margin-right: var(--right-margin);
 }
 
@@ -94,7 +97,7 @@
   }
 
   .source-wrapper {
-    --right-margin: 72px;
+    --right-margin: var(--source-right-margin-700);
   }
 }
 
@@ -102,6 +105,6 @@
 @media only screen and (max-width: 400px) {
   
   .source-wrapper {
-    --right-margin: 65px;
+    --right-margin: var(--source-right-margin-400);
   }
 }
